--- a/kronofoto/static/assets/css/kronofoto.css
+++ b/kronofoto/static/assets/css/kronofoto.css
@@ -513,7 +513,6 @@ main article.fi-image {
 
   position: relative;
   margin: auto;
-  max-width: 100vh;
 }
 
 main .img-left-space{
